@startuml

title __SERVICE's Class Diagram__\n


    namespace om.example.demo {
      namespace service {
        interface com.example.demo.service.ConcertService {
            {abstract} + add()
            {abstract} + delete()
            {abstract} + getAll()
            {abstract} + getById()
            {abstract} + update()
        }
      }
    }

  


    namespace om.example.demo {
      namespace service {
        class com.example.demo.service.ConcertServiceImpl {
            + add()
            + delete()
            + getAll()
            + getById()
            + update()
        }
      }
    }

  


    namespace om.example.demo {
      namespace service {
        interface com.example.demo.service.TicketService {
            {abstract} + cancelTicket()
            {abstract} + getAll()
            {abstract} + getById()
            {abstract} + sellTicket()
        }
      }
    }

  


    namespace om.example.demo {
      namespace service {
        class com.example.demo.service.TicketServiceImpl {
            + cancelTicket()
            + getAll()
            + getById()
            + sellTicket()
        }
      }
    }

  


    namespace om.example.demo {
      namespace service {
        interface com.example.demo.service.UserService {
            {abstract} + add()
            {abstract} + delete()
            {abstract} + getAll()
            {abstract} + getById()
            {abstract} + update()
        }
      }
    }

  


    namespace om.example.demo {
      namespace service {
        class com.example.demo.service.UserServiceImpl {
            + add()
            + delete()
            + getAll()
            + getById()
            + update()
        }
      }
    }

  

  com.example.demo.service.ConcertServiceImpl .up.|> com.example.demo.service.ConcertService
  com.example.demo.service.ConcertServiceImpl o-- com.example.demo.repository.ConcertRepository : concertRepository
  com.example.demo.service.TicketServiceImpl .up.|> com.example.demo.service.TicketService
  com.example.demo.service.TicketServiceImpl o-- com.example.demo.repository.TicketRepository : ticketRepository
  com.example.demo.service.UserServiceImpl .up.|> com.example.demo.service.UserService
  com.example.demo.service.UserServiceImpl o-- com.example.demo.repository.RoleRepository : roleRepository
  com.example.demo.service.UserServiceImpl o-- com.example.demo.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
